added KitKat's new IMMERSIVE MODE feature (real fullscreen)

--- a/App/project.properties
+++ b/App/project.properties
@@ -14,3 +14,6 @@
 target=Google Inc.:Google APIs:19
 dex.disable.merger=true
 dex.disable.merger=true
+dex.disable.merger=true
+dex.disable.merger=true
+dex.disable.merger=true
